# qa_learning

./: README.md  alchemy.py  checkers.py  conftest.py  test_device_sql.py
act-device-api/: .gitattributes  .gitignore  .gitlab-ci.yml  (+12 more)
device-api-e2e/: .flake8  .gitignore  .gitlab-ci.yml  .services.yml  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt
device-api-e2e/allure-report/export/: influxDbData.txt  prometheusData.txt
device-api-e2e/allure-report/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
device-api-e2e/allure-report/widgets/: severity.json  status-chart.json  suites.json  summary.json
device-api-e2e/framework/: checkers.py  constants.py
device-api-e2e/framework/grpc/: api.py
device-api-e2e/framework/grpc/clients/google/api/: annotations_pb2.py  annotations_pb2.pyi  http_pb2.py  http_pb2.pyi
device-api-e2e/framework/grpc/clients/google/protobuf/: timestamp_pb2.py  timestamp_pb2.pyi
device-api-e2e/framework/grpc/clients/ozonmp/act_device_api/v1/: act_device_api_pb2.py  act_device_api_pb2.pyi  act_device_api_pb2_grpc.py
device-api-e2e/framework/grpc/clients/protoc_gen_openapiv2/options/: annotations_pb2.py  annotations_pb2.pyi  openapiv2_pb2.py  openapiv2_pb2.pyi
device-api-e2e/framework/grpc/clients/validate/: validate_pb2.py  validate_pb2.pyi
device-api-e2e/framework/rest/: api.py  models.py
device-api-e2e/framework/sql/: act_device_api_models.py  alchemy.py  client.py  ctx.py  helper.py
device-api-e2e/tests/: conftest.py  test_device_grpc.py  test_device_rest.py  test_device_sql.py
(+37 files in other folders)
